Add modern cmake

--- a/examples/efficientnet/CMakeLists.txt
+++ b/examples/efficientnet/CMakeLists.txt
@@ -1,10 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
-project(example)
+project(efficientnet)
 
-find_library(TENSORFLOW_LIB tensorflow HINT $ENV{HOME}/libtensorflow2/lib)
-
-set(CMAKE_CXX_STANDARD 17)
-
-add_executable(example main.cpp)
-target_include_directories(example PRIVATE ../../include $ENV{HOME}/libtensorflow2/include)
-target_link_libraries (example "${TENSORFLOW_LIB}")
+add_executable(efficientnet main.cpp)
+target_link_libraries(efficientnet cppflow)
+target_compile_definitions(efficientnet PUBLIC
+  CAT_PATH="${CMAKE_CURRENT_SOURCE_DIR}/my_cat.jpg"
+  MODEL_PATH="${CMAKE_CURRENT_SOURCE_DIR}/model"
+)
