--- a/examples/multi_input_output/CMakeLists.txt
+++ b/examples/multi_input_output/CMakeLists.txt
@@ -1,10 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
-project(example)
+project(multi_input_output)
 
-find_library(TENSORFLOW_LIB tensorflow HINT $ENV{HOME}/libtensorflow2/lib)
-
-set(CMAKE_CXX_STANDARD 17)
-
-add_executable(example main.cpp)
-target_include_directories(example PRIVATE ../../include $ENV{HOME}/libtensorflow2/include)
-target_link_libraries (example "${TENSORFLOW_LIB}")
+add_executable(multi_input_output main.cpp)
+target_link_libraries(multi_input_output cppflow)
+target_compile_definitions(multi_input_output PUBLIC
+  MODEL_PATH="${CMAKE_CURRENT_SOURCE_DIR}/model"
+)
