--- a/examples/tensor/CMakeLists.txt
+++ b/examples/tensor/CMakeLists.txt
@@ -1,10 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(example)
+project(tensor)
 
-find_library(TENSORFLOW_LIB tensorflow HINT $ENV{HOME}/libtensorflow2/lib)
-
-set(CMAKE_CXX_STANDARD 17)
-
-add_executable(example main.cpp odr.cpp)
-target_include_directories(example PRIVATE ../../include $ENV{HOME}/libtensorflow2/include)
-target_link_libraries(example "${TENSORFLOW_LIB}")
+add_executable(tensor main.cpp odr.cpp)
+target_link_libraries(tensor cppflow)
