--- a/examples/eager_op_multithread/CMakeLists.txt
+++ b/examples/eager_op_multithread/CMakeLists.txt
@@ -1,14 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
-project(example)
+project(eager_op_multithread)
 
-find_library(TENSORFLOW_LIB tensorflow HINT $ENV{HOME}/libtensorflow2/lib)
 find_package(Threads REQUIRED)
-
-set(CMAKE_CXX_STANDARD 17)
 
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer -fsanitize=thread")
 #set(CMAKE_LINKER_FLAGS "${CMAKE_LINKER_FLAGS} -fno-omit-frame-pointer -fsanitize=thread")
 
-add_executable(example main.cpp)
-target_include_directories(example PRIVATE ../../include $ENV{HOME}/libtensorflow2/include)
-target_link_libraries(example "${TENSORFLOW_LIB}" Threads::Threads)
+add_executable(eager_op_multithread main.cpp)
+target_link_libraries(eager_op_multithread Threads::Threads cppflow)
